# apertium-ind-zlm

./: .gitattributes  .gitignore  AUTHORS  Makefile  Makefile.am  README  apertium-id-ms.id-ms.dix  apertium-id-ms.id-ms.t1x  apertium-id-ms.id.dix  apertium-id-ms.id.lexc  apertium-id-ms.id.metadix  apertium-id-ms.id.xfst  apertium-id-ms.ms.dix  apertium-id-ms.ms.lexc  apertium-id-ms.ms.metadix  apertium-id-ms.ms.xfst  autogen.sh  configure.ac  main-id.foma  main-ms.foma  modes.xml
dev/: README  id.coverage-summary.txt  inconsistency-summary.sh  inconsistency.sh  ms.coverage-summary.txt  mswiki.apertium-id-ms.txt  mswiki.apertium-ms-id.postedited.txt  mswiki.apertium-ms-id.txt  mswiki.apertium.eval.txt  mswiki.google-id-ms.txt  mswiki.google-ms-id.postedited.txt  mswiki.google-ms-id.txt  mswiki.google.eval.txt  mswiki.ms.txt  news200612.id.txt  news200612.ms.txt  pgoh13.id.txt  pgoh13.ms.txt  story.ms.txt  testvoc-summary.id-ms.txt  testvoc-summary.ind-zlm.txt  testvoc-summary.ms-id.txt  testvoc-summary.zlm-ind.txt  testvoc.sh  trimmed-coverage.sh
dev/bidix/: bidix.id-ms.txt
dev/monodix/: README  analyser.py  clean.sh  create-monodix.sh  exceptions.txt  footer.txt  header.txt  kateglo-with-pos.py  kateglo.py  kateglo.txt  manual.id.txt  manual.ms.txt  middle.txt  paradigms-gen.py  paradigms.txt  result.id.dix  result.ms.dix  run.sh  sort-dic.py  wordlist.id  wordlist.ms
paper/: Makefile  coling2012.sty  id-ms.coling2012.bib  id-ms.coling2012.tex  mathdesign.sty  paralist.sty
paper/poster/: poster.pptx
test/: ind-zlm-pending-chunker-expected.txt  ind-zlm-pending-disam-expected.txt  ind-zlm-pending-input.txt  ind-zlm-pending-morph-expected.txt  ind-zlm-pending-postgen-expected.txt  ind-zlm-pending-postgen-gold.txt  ind-zlm-pending-tagger-expected.txt  tests.json
texts/: komputer.ana.lt  komputer.raw.txt
words/: id.conjunction  id.interjection
